<resources>
	<string name="theDayEachWeekStartsWith">The day each week starts with</string>
	<string name="firstDayOfWeek">First Day Of Week</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="setButtonLabel">Set</string>
	<string name="appDescription">A Calendar for Android which will store your events, tasks, notes and contacts on a remote CalDAV / CardDAV server, such as DAViCal (See: www.davical.org)</string>
	<string name="appDescriptionTasks">A Task List for Android which will store your tasks on a remote CalDAV / CardDAV server, such as DAViCal (See: www.davical.org)</string>
	<string name="appDescriptionNotes">A Task List for Android which will store your tasks on a remote CalDAV / CardDAV server, such as DAViCal (See: www.davical.org)</string>
	<string name="Active">Active</string>
	<string name="Add_Server">Add Server</string>
	<string name="A_name_for_this_server_configuration">A name for this server configuration</string>
	<string name="Authentication_Type">Authentication Type</string>
	<string name="Simple_Path">Simple Path</string>
	<string name="Simple_User_URL">User URL</string>
	<string name="Server_URL">Server URL:</string>
	<string name="Enter_a_brief_summary_of_the_event">Enter a brief summary of the event</string>
	<string name="Name">Name</string>
	<string name="Force_full_resync">Force resynchronisation</string>
	<string name="Password">Password</string>
	<string name="Save">Save</string>
	<string name="Settings">Settings</string>
	<string name="Server_Name">Server Name</string>
	<string name="Server_Options">Server Options</string>
	<string name="Collection_Options">Collection Options</string>
	<string name="Colour">Colour</string>
	<string name="Default_timezone">Default Timezone</string>
	<string name="DefaultAlarmTone">Default Alarm Tone</string>
	<string name="Server_Path">Server Path</string>
	<string name="Server_Port">Server Port</string>
	<string name="Summary">Summary</string>
	<string name="Sync_collection_now">Synchronise Now</string>
	<string name="Disable_collection">Disable Collection</string>
	<string name="The_authentication_type_used">The authentication type used by the server</string>
	<string name="The_password_to_use">The password to use for authentication with the server</string>
	<string name="The_path_on_the_server">The path on the server, such as "/caldav.php/user/"</string>
	<string name="A_URL_or_domain_name">The URL or domain of your calendar server</string>
	<string name="The_servers_hostname">The server\'s full hostname such as "calendar.davical.com"</string>
	<string name="The_username_to_use">The username to use for authentication with the server</string>
	<string name="Username">Username</string>
	<string name="Use_SSL">Use SSL</string>
	<string name="Whether_this_server_is_active">Whether this server should be actively used</string>
	<string name="Whether_to_use_encryption">Whether to use encryption for the connection to the server</string>
	<string name="appActivityEventCreate">New Event</string>
	<string name="appActivityServerConfigList">Servers</string>
	<string name="appActivityServerConfiguration">Server Configuration</string>
	<string name="appActivityAddServerList">Server Templates</string>
	<string name="appActivityCollectionConfigList">Calendars and Addressbooks</string>
	<string name="appActivityDebugSettings">Debug Settings</string>
	<string name="appActivitySettings">Settings</string>
	<string name="appActivityPreference">Preferences</string>
	<string name="The_port_to_connect_to">The port to connect to on the server</string>
	<string name="A_name_for_this_collection">A name for this collection</string>
	<string name="pActive_addressbook">Active Addressbook</string>
	<string name="pActive_for_events">Active for Events</string>
	<string name="pActive_for_journal">Active for Notes</string>
	<string name="pActive_for_tasks">Active for Tasks</string>
	<string name="pUse_Alarms">Use alarms in this collection?</string>
	<string name="Use_Alarms">Alarms Enabled</string>
	<string name="Active_addressbook">Is this collection used to store contacts?</string>
	<string name="Active_for_events">Is this collection used to store events?</string>
	<string name="Active_for_journal">Is this collection used to store notes?</string>
	<string name="Active_for_tasks">Is this collection used to store tasks?</string>
	<string name="The_colour_associated_with_this_collection">The colour associated with data from this collection</string>
	<string name="The_timezone_new_events_default_to">The timezone used for new events in this collection</string>
	<string name="pMax_age_on_3g">Sync minutes on 3g</string>
	<string name="The_maximum_age_for_data_while_on_3g">The maximum time (in minutes) before updating, when on 3g</string>
	<string name="pMax_age_on_wifi">Sync minutes on wifi</string>
	<string name="The_maximum_age_for_data_while_on_wifi">The maximum time (in minutes) before updating, when on wifi</string>
	<string name="Use_alarms_from_this_calendar">Should alarms in this calendar be displayed?</string>
	<string name="Monday">Monday</string>
	<string name="Tuesday">Tuesday</string>
	<string name="Wednesday">Wednesday</string>
	<string name="Thursday">Thursday</string>
	<string name="Friday">Friday</string>
	<string name="Saturday">Saturday</string>
	<string name="Sunday">Sunday</string>
	<string name="Mon">Mon</string>
	<string name="Tue">Tue</string>
	<string name="Wed">Wed</string>
	<string name="Thu">Thu</string>
	<string name="Fri">Fri</string>
	<string name="Sat">Sat</string>
	<string name="Sun">Sun</string>
	<string name="chMon">M</string>
	<string name="chTue">T</string>
	<string name="chWed">W</string>
	<string name="chThu">T</string>
	<string name="chFri">F</string>
	<string name="chSat">S</string>
	<string name="chSun">S</string>
	<string name="January">January</string>
	<string name="February">February</string>
	<string name="March">March</string>
	<string name="April">April</string>
	<string name="May">May</string>
	<string name="June">June</string>
	<string name="July">July</string>
	<string name="August">August</string>
	<string name="September">September</string>
	<string name="October">October</string>
	<string name="November">November</string>
	<string name="December">December</string>
	<string name="thJan">Jan</string>
	<string name="thFeb">Feb</string>
	<string name="thMar">Mar</string>
	<string name="thApr">Apr</string>
	<string name="thMay">May</string>
	<string name="thJun">Jun</string>
	<string name="thJul">Jul</string>
	<string name="thAug">Aug</string>
	<string name="thSep">Sep</string>
	<string name="thOct">Oct</string>
	<string name="thNov">Nov</string>
	<string name="thDec">Dec</string>
	<string name="oneCharMorning">a</string>
	<string name="oneCharAfternoon">p</string>
	<string name="abbrevMorning">am</string>
	<string name="abbrevAfternoon">pm</string>
	<string name="YearViewSize_PrefTitle">Number of Months in Year View</string>
	<string name="YearViewSize_PrefSummary">The number of months that are visible in the year view</string>
	<string name="Snooze_PrefTitle">Snooze Time</string>
	<string name="Snooze_PrefSummary">How many minutes to snooze alarms when the snooze button is pressed</string>
	<string name="prefDefaultEventsCollection_Title">Default Event Calendar</string>
	<string name="prefDefaultEventsCollection_Summary">The default collection for new events</string>
	<string name="prefDefaultTasksCollection_Title">Default Task Calendar</string>
	<string name="prefDefaultTasksCollection_Summary">The default collection for new tasks</string>
	<string name="prefDefaultNotesCollection_Title">Default Note Calendar</string>
	<string name="prefDefaultNotesCollection_Summary">The default collection for new journal notes</string>
	<string name="DefaultAlarmTone_PrefTitle">Default Alarm Tone</string>
	<string name="DefaultAlarmTone_PrefSummary">The default sound to use for alarms.</string>
	<string name="AlarmVolumeType_PrefTitle">Setting for Alarm Volume</string>
	<string name="AlarmVolumeType_PrefSummary">The setting used for the volume of the alarm tone</string>
	<string name="AlarmBellVolume">Alarm bell volume</string>
	<string name="MediaPlayerVolume">Media volume</string>
	<string name="prefWorkdayStart_Title">Workday Start</string>
	<string name="prefWorkdayStart_Summary">The start time for the working day.</string>
	<string name="prefWorkdayFinish_Title">Workday Finish</string>
	<string name="prefWorkdayFinish_Summary">The finish time for the working day.</string>
	<string name="prefWeekViewLinesPerHour_Title">Rows Height</string>
	<string name="prefWeekViewLinesPerHour_Summary">The height of each hour of the day in week view.</string>
	<string name="prefWeekViewDayWidth_Title">Column Width</string>
	<string name="prefWeekViewDayWidth_Summary">The width of each day column in the week view.</string>
	<string name="Today">Today</string>
	<string name="Year">Year</string>
	<string name="Month">Month</string>
	<string name="Week">Week</string>
	<string name="Edit">Edit</string>
	<string name="Apply">Apply</string>
	<string name="Advanced">Advanced</string>
	<string name="Simple">Simple</string>
	<string name="Add">Add</string>
	<string name="UnNamedServer">Unnamed Server</string>
	<string name="LocationPrompt">Where:</string>
	<string name="NotesPrompt">Notes:</string>
	<string name="AlarmsPrompt">Alarms:</string>
	<string name="RepeatsPrompt">Repeats:</string>
	<string name="AllDayPrompt">All Day:</string>
	<string name="FromPrompt">From:</string>
	<string name="TodoFromPrompt">Start On:</string>
	<string name="UntilPrompt">Until:</string>
	<string name="DuePrompt">Due:</string>
	<string name="CompletedPrompt">Finished:</string>
	<string name="DaysPrompt">Days:</string>
	<string name="StartPrompt">Start:</string>
	<string name="CompletePrompt">Complete:</string>
	<string name="CollectionPrompt">Calendar:</string>
	<string name="defaultCalendar">Default Calendar</string>
	<string name="theCalendarForNewEvents">The calendar to be used by default for new events.</string>
	<string name="TwelveTwentyfour_PrefTitle">Use 24-hour format</string>
	<string name="TwelveTwentyfour_OnSummary">14:00</string>
	<string name="TwelveTwentyfour_OffSummary">2:00pm</string>
	<string name="OnlyOnce">Occurs once</string>
	<string name="EveryWeekday">Every Weekday</string>
	<string name="EveryWeekend">Every Weekend</string>
	<string name="EveryDay">Daily</string>
	<string name="EveryWeek">Weekly</string>
	<string name="EveryMonth">Monthly</string>
	<string name="EveryYear">Yearly</string>
	<string name="EveryNDays">Every %s days</string>
	<string name="EveryNWeeks">Every %s weeks</string>
	<string name="EveryNMonths">Every %s months</string>
	<string name="EveryNYears">Every %s years</string>
	<string name="EveryMonday">Every Monday</string>
	<string name="EveryTuesday">Every Tuesday</string>
	<string name="EveryWednesday">Every Wednesday</string>
	<string name="EveryThursday">Every Thursday</string>
	<string name="alarmsDisabledNote">(all alarms are disabled for this calendar)</string>
	<string name="username">Username:</string>
	<string name="password">Password:</string>
	<string name="eventName">Event Name</string>
	<string name="plus">+</string>
	<string name="ConfigureServer">Configure Server</string>
	<string name="Skip">Skip</string>
	<string name="Configure">Configure</string>
	<string name="first_name_hint">First name</string>
	<string name="surname_hint">Surname</string>
	<string name="phone_prompt">Phone</string>
	<string name="phone_hint">Phone</string>
	<string name="email_prompt">Email</string>
	<string name="email_hint">Email</string>
	<string name="postal_address_prompt">Postal address</string>
	<string name="organisation_prompt">Organisation</string>
	<string name="contact_picture_description">Contact Picture</string>
	<string name="icon_add_description">Add</string>
	<string name="icon_delete_description">Delete</string>
</resources>