<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/NewServerConfigLayout"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/morphossbg"
	android:baselineAligned="false"
	android:orientation="vertical" >
	<TextView
		android:id="@+id/configNamePrompt"
		style="@style/general_title_bar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/ConfigureServer" />
	<EditText
		android:id="@+id/configName"
		style="@style/gen_content"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/A_name_for_this_server_configuration"
		android:inputType="textCapSentences|textEmailSubject" >
		<requestFocus />
	</EditText>
	<LinearLayout
		android:id="@+id/userLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top|left"
		android:orientation="horizontal" >
		<TextView
			android:id="@+id/userNamePrompt"
			style="@style/gen_label"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/username" />
		<EditText
			android:id="@+id/userName"
			style="@style/gen_content"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/Username"
			android:inputType="textNoSuggestions" />
	</LinearLayout>
	<LinearLayout
		android:id="@+id/pwLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top|left"
		android:orientation="horizontal" >
		<TextView
			android:id="@+id/passwordPrompt"
			style="@style/gen_label"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/password" />
		<EditText
			android:id="@+id/password"
			style="@style/gen_content"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/Password"
			android:inputType="textNoSuggestions|textPassword" >
		</EditText>
	</LinearLayout>
	<TextView
		android:id="@+id/serverUrlPrompt"
		style="@style/gen_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/Server_URL" />
	<EditText
		android:id="@+id/serverUrl"
		style="@style/gen_content"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/A_URL_or_domain_name"
		android:inputType="textUri" >
	</EditText>
	<LinearLayout
		android:id="@+id/buttonLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:baselineAligned="false"
		android:orientation="horizontal" >
		<LinearLayout
			android:layout_width="30sp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:background="#00000000"
			android:gravity="center"
			android:padding="6sp" >
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@color/themed_button_colour" >
				<Button
					android:id="@+id/configure_button"
					style="@style/themed_bottom_button"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:height="38sp"
					android:text="@string/Configure"
					android:width="180sp" />
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:layout_width="30sp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="#00000000"
			android:gravity="center"
			android:padding="6sp" >
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@color/themed_button_colour" >
				<Button
					android:id="@+id/skip_button"
					style="@style/themed_bottom_button"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:height="38sp"
					android:text="@string/Skip"
					android:width="180sp" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>